--- a/03_dom/one.html
+++ b/03_dom/one.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8">
 
     <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: rgb(52, 12, 12);
+            color: #fff
+        }
+    </style>
 </head>
-<body>
-    <div class="bg-black">
+<body class="bg-black">
+    <div>
         <h1 id="title" class="heading">DOM learning on Chai aur code</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing.</h2>
+        <input type="password" name="boi" id="">
+        <ul>
+            <li class="list-item">One</li>
+            <li class="list-item">Two</li>
+            <li class="list-item">Three</li>
+            <li class="list-item">Four</li>
+        </ul>
     </div>
     
 </body>
